<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/io_background"
    tools:context=".MainActivity">


    <TextView

        android:id="@+id/input"
        android:layout_width="260dp"
        android:layout_height="72dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/myborder"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="0"
        tools:visibility="visible" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="330dp"
        android:layout_height="350dp"
        android:layout_margin="30dp"
        android:background="@drawable/myborder2"
        android:gravity="bottom"
        android:orientation="vertical"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/link_twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_1"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:height="90dp"
                android:text="@string/_1"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_2"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:height="90dp"
                android:text="@string/_2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_3"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:height="90dp"
                android:text="@string/_3" />


        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_4"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:height="90dp"
                android:text="@string/_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_5"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:height="90dp"
                android:text="@string/_5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_6"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:height="90dp"
                android:text="@string/_6" />


        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_7"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:height="90dp"
                android:text="@string/_7" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_8"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:height="90dp"
                android:text="@string/_8" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_9"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:height="90dp"
                android:text="@string/_9" />


        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_dot"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:height="90dp"
                android:text="@string/dot" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_0"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:height="90dp"
                android:text="@string/_0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_borrar"
                style="@style/Button_Style"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:height="90dp"
                android:text="@string/borrar"
                android:textSize="15sp" />


        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/link_twitter"
        android:layout_width="260dp"
        android:layout_height="76dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/gray1"
        android:text="@string/boton_pagar"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="72dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/myborder3"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/titulo_terminal"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/myborder"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input">

        <Spinner
            android:id="@+id/spinner_currencies"
            android:layout_width="120dp"
            android:layout_height="42dp"
            android:spinnerMode="dropdown" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="225dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/seleccione_moneda"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input" />


</androidx.constraintlayout.widget.ConstraintLayout>