<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@color/io_background"
    tools:context=".PopUpFragment">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_propina"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/noTipButton"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="5dp"
        android:text="@string/sin_propina"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/_5pcButton"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:text="@string/_5pc"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/_20pcButton"
        app:layout_constraintTop_toTopOf="@+id/noTipButton" />

    <Button
        android:id="@+id/_10pcButton"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:text="@string/_10pc"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/noTipButton"
        app:layout_constraintTop_toBottomOf="@+id/noTipButton" />

    <Button
        android:id="@+id/_15pcButton"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="5dp"
        android:text="@string/_15pc"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/_10pcButton"
        app:layout_constraintTop_toTopOf="@+id/_10pcButton" />

    <Button
        android:id="@+id/_20pcButton"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="5dp"
        android:text="@string/_20pc"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/_15pcButton"
        app:layout_constraintTop_toTopOf="@+id/_15pcButton" />



</androidx.constraintlayout.widget.ConstraintLayout>